--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "name": "prbt",
+  "version": "0.0.1",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
+    "url": ""
   },
   "keywords": [],
   "author": "GitHub",
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "homepage": "",
   "devDependencies": {
     "electron": "^1.3.4",
     "gulp": "^3.9.1",
@@ -33,7 +33,6 @@
     "gulp-util": "^3.0.7"
   },
   "dependencies": {
-    "jquery": "^3.1.1",
-    "semantic-ui": "^2.2.4"
+    "jquery": "^3.1.1"
   }
 }
