Imp css & images processing & minify

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-util": "^3.0.7"
   },
   "dependencies": {
+    "electron-browser-window-options": "^1.0.3",
     "jquery": "^3.1.1"
   }
 }
