Clean code, reorder, known bug in javascript build

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "gulp-util": "^3.0.7"
   },
   "dependencies": {
-    "electron-browser-window-options": "^1.0.3",
-    "jquery": "^3.1.1"
+    "electron-browser-window-options": "^1.0.3"
   }
 }
