--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "",
   "devDependencies": {
-    "electron": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "electron": "*",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.12",
     "gulp-closure-compiler": "^0.4.0",
     "gulp-concat": "^2.6.0",
